Cleaning settings and minimizing code

--- a/stylesheets/scss/components/_appbar.scss
+++ b/stylesheets/scss/components/_appbar.scss
@@ -4,6 +4,24 @@
  * http://www.google.com/design/spec/layout/structure.html#structure-app-bar
  * http://www.google.com/design/spec/layout/structure.html#structure-toolbars
  **************************************/
+// Title
+$appbar-title-small-padding: rem-calc(12px) 0 rem-calc(12px) 0 !important; // Default rem-calc(12px) 0 rem-calc(12px) 0 !important
+$appbar-title-medium-padding: rem-calc(20px) 0 rem-calc(20px) 0 !important; // Default rem-calc(20px) 0 rem-calc(20px) 0 !important
+
+// Icons
+$appbar-icon-font-size: rem-calc(32px); // Default rem-calc(32px)
+$appbar-icon-small-padding: rem-calc(8px); // Default rem-calc(8px)
+$appbar-icon-medium-padding: rem-calc(16px); // Default rem-calc(16px);
+
+// Element widths
+$appbar-nav-width: 19%; // Default 19%
+$appbar-title-small-width: 71%; // Default 71%
+$appbar-title-medium-width: 50%; // Default 50%
+$appbar-actions-width: 27%; // Default 27%;
+$appbar-menu-width: 4%; // Default 4%
+
+// More menu
+$appbar-more-margin: rem-calc(4px); // Default rem-calc(4px)
 
 .sc-appbar {
 	@extend .sc-row;
@@ -12,9 +30,9 @@
 	color: $appbar-text;
 	height: $appbar-small-height;
 	line-height: normal;
-	position: $appbar-position;
+	position: fixed;
 	width: 100%;
-	z-index: $appbar-z-index;
+	z-index: 1;
 
 	@media #{$small-up} {
 		height: $appbar-medium-height;
@@ -115,9 +133,9 @@
 			list-style-type: none;
 			margin: 0;
 			padding: 0;
-			position: $appbar-more-position;
-			right: $appbar-more-right;
-			top: $appbar-more-top;
+			position: absolute;
+			right: $appbar-more-margin;
+			top: $appbar-more-margin;
 			width: auto;
 			visibility: hidden;
 			@include opacity(0);
