--- a/stylesheets/scss/components/_functions.scss
+++ b/stylesheets/scss/components/_functions.scss
@@ -1,16 +1,16 @@
-@function rem-calc($size, $font-size : $font-size) {
+@function rem-calc( $size, $font-size : $font-size ) {
 	$font-size: $font-size + 0px;
 	$remSize: $size / $font-size;
 	@return #{$remSize}rem;
 }
 
-@function emCalc($size, $font-size : $font-size) {
+@function emCalc( $size, $font-size : $font-size ) {
 	$font-size: $font-size + 0px;
 	$emSize: $size / $font-size;
 	@return #{$emSize}em;
 }
 
-@function decimal-round ($number, $digits: 0, $mode: round) {
+@function decimal-round( $number, $digits: 0, $mode: round ) {
 	$n: 1;
 	// $number must be a number
 	@if type-of($number) != number {
@@ -40,7 +40,7 @@
 	}
 }
 
-@function in-array($value, $array) {
+@function in-array( $value, $array ) {
 	@if index($array, $value) {
 		@return true;
 	} @else {
@@ -48,12 +48,41 @@
 	}
 }
 
-@function str_replace($string, $search, $replace: '') {
-	$index: str-index($string, $search);
+@function str_replace( $string, $search, $replace: '' ) {
+	$index: str-index( $string, $search );
 
 	@if $index {
-		@return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+		@return str-slice( $string, 1, $index - 1 ) + $replace + str-replace( str-slice( $string, $index + str-length( $search ) ), $search, $replace );
 	} @else {
 		@return $string;
+	}
+}
+
+@function to-string( $value ) {
+	@return '#{$value}';
+}
+
+@function color( $color, $accent, $colors: $colors ) {
+	$color-search: null; // Store color name array
+	$accent: to-string($accent);
+
+	// Search color name array
+	@each $color-name, $swatches in $colors {
+		@each $color-type, $color-value in $swatches {
+			@if $color == $color-value {
+				$color-search: $color-name; // Set color array name
+			}
+		}
+	}
+
+	// Return color $accent
+	@each $color-name, $swatches in $colors {
+		@if $color-name == $color-search {
+			@each $color-type, $color-value in $swatches {
+				@if $color-type == $accent {
+					@return $color-value;
+				}
+			}
+		}
 	}
 }
