--- a/stylesheets/scss/components/_notifications.scss
+++ b/stylesheets/scss/components/_notifications.scss
@@ -285,6 +285,7 @@
 			.sc-notification-content {
 				.sc-actions {
 					top: rem-calc(44px);
+					left: 0;
 					right: auto;
 					width: rem-calc((5*35)+0px);
 
