--- a/stylesheets/scss/components/_selection.scss
+++ b/stylesheets/scss/components/_selection.scss
@@ -252,14 +252,14 @@ $switch-thumb-radial-left-active: calc( #{$switch-thumb-left} - ( #{$switch-thum
 .sc-switch {
 	// Track
 	.sc-lever {
-		background: rgba($black, .38);
+		background: $switch-track-background;
 		display: inline-block;
 		height: $switch-track-height;
-		position: relative;
+		margin: calc( #{$switch-thumb-radial-size} / 2 );
 		@include border-radius($switch-track-height);
+		position: relative;
 		vertical-align: middle;
-		width: $switch-track-width;
-		margin: calc( #{$switch-thumb-radial-size} / 2 ); // To accommodate for radial
+		width: $switch-track-width; // To accommodate for radial
 		@include transition(background $transition-small-duration $basic-transition);
 
 		@media #{$medium-only} {
@@ -274,14 +274,14 @@ $switch-thumb-radial-left-active: calc( #{$switch-thumb-left} - ( #{$switch-thum
 		// Thumb
 		&:after {
 			@include material-shadow(1);
-			background: rgba($grey-50, 1); //$grey-50
+			background: $switch-thumb-background;
 			content: '';
 			@include border-radius(50%);
 			height: $switch-thumb-size;
+			left: 0;
 			position: absolute;
 			top: $switch-thumb-top;
 			width: $switch-thumb-size;
-			left: 0;
 			@include transition(background $transition-small-duration $basic-transition unquote(',') left $transition-small-duration $basic-transition);
 
 			@media #{$medium-only} {
@@ -297,21 +297,37 @@ $switch-thumb-radial-left-active: calc( #{$switch-thumb-left} - ( #{$switch-thum
 		@media #{$medium-down} {
 			&:before {
 				content: '';
-				width: $switch-thumb-radial-size;
-				height: $switch-thumb-radial-size;
+				width: $switch-thumb-size;
+				height: $switch-thumb-size;
 				@include border-radius(50%);
-				left: $switch-thumb-radial-left;
+				left: $switch-thumb-left;
 				position: absolute;
-				top: $switch-thumb-radial-top;
-				@include transition(background $transition-small-duration $basic-transition);
+				top: $switch-thumb-top;
+				@include transition(
+						background $transition-small-duration $basic-transition unquote(',')
+						left $transition-small-duration $basic-transition unquote(',')
+						width $transition-small-duration $basic-transition unquote(',')
+						height $transition-small-duration $basic-transition unquote(',')
+						top $transition-small-duration $basic-transition
+				);
 
 				@media #{$medium-only} {
-					@include transition(background $transition-medium-duration $basic-transition);
+					@include transition(
+							background $transition-medium-duration $basic-transition unquote(',')
+							left $transition-medium-duration $basic-transition unquote(',')
+							width $transition-medium-duration $basic-transition unquote(',')
+							height $transition-medium-duration $basic-transition unquote(',')
+							top $transition-medium-duration $basic-transition
+					);
 				}
 			}
 
 			&:active:before, &:focus:before {
-				background: rgba($grey-400, .2);
+				background: $switch-thumb-radial-background;
+				width: $switch-thumb-radial-size;
+				height: $switch-thumb-radial-size;
+				left: $switch-thumb-radial-left;
+				top: $switch-thumb-radial-top;
 			}
 		}
 	}
@@ -322,11 +338,11 @@ $switch-thumb-radial-left-active: calc( #{$switch-thumb-left} - ( #{$switch-thum
 		&:checked {
 			// Track
 			+ .sc-lever {
-				background: rgba($main-color, .5);
+				background: $switch-track-background-active;
 
 				// Thumb
 				&:after {
-					background: $main-color;
+					background: $switch-thumb-background-active;
 					left: $switch-thumb-left;
 				}
 
@@ -334,7 +350,7 @@ $switch-thumb-radial-left-active: calc( #{$switch-thumb-left} - ( #{$switch-thum
 				@media #{$medium-down} {
 					&:active:before, &:focus:before {
 						left: $switch-thumb-radial-left-active;
-						background: rgba($main-color, .2);
+						background: $switch-thumb-radial-background-active;
 					}
 				}
 			}
@@ -343,17 +359,17 @@ $switch-thumb-radial-left-active: calc( #{$switch-thumb-left} - ( #{$switch-thum
 		&:disabled {
 			// Track
 			+ .sc-lever {
-				background: rgba($black, .12);
+				background: $switch-track-disabled-background;
 
 				// Thumb
 				&:after {
-					background: rgba($grey-400, 1);
+					background: $switch-thumb-disabled-background;
 				}
 
 				// Radial
 				@media #{$medium-down} {
 					&:active:before, &:focus:before {
-						background: rgba($grey-400, .2);
+						background: $switch-thumb-radial-disabled-background;
 					}
 				}
 			}
