--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -5,11 +5,7 @@
 - Global
 - Typography
 	- Font path
-	- Typographic scale
-	- Typographic Scale for devices (max-width: 960px)
-	- Basic styles
-	- Line heights
-	- Tracking and kerning
+	- Colors
 - Appbar
 	- Basic
 	- Colors
@@ -68,7 +64,7 @@ $link-hover: $secondary-color;
 /**************************************
  * Global
  **************************************/
-$theme: 'light';
+$theme: light; // Default either light or dark
 $select-background: $cyan-a200; // Default $cyan-a200
 $basic-transition: cubic-bezier(0.4, 0.0, 0.2, 1); // Default cubic-bezier(0.4, 0.0, 0.2, 1)
 $element-enter-transition: cubic-bezier(0.0, 0.0, 0.2, 1); // Default cubic-bezier(0.0, 0.0, 0.2, 1)
@@ -90,74 +86,6 @@ $noto-font-path: '/stylesheets/scss/components/fonts/Noto/';
 // Font size
 $font-size: 14; //px Default 14 or 15
 
-// Typographic Scale
-$font-size-display-4: 112; // Default 112
-$font-size-display-3: 56; // Default 56
-$font-size-display-2: 45; // Default 45
-$font-size-display-1: 34; // Default 43
-$font-size-headline: 24; // Default 24
-$font-size-title: 20; // Default 20
-$font-size-subhead-2: 15; // Default 15
-$font-size-subhead-1: 15; // Default 15
-$font-size-body-2: 13; // Default 13
-$font-size-body-1: 13; // Default 13
-$font-size-caption: 12; // Default 12
-$font-size-label: 12; // Default 12
-$font-size-menu: 13; // Default 13
-$font-size-button: 14; // Default 14
-
-// Typographic Scale for devices (max-width: 960px)
-$font-size-small-subhead: 16; // Default  16
-$font-size-small-body: 14; // Default 14
-
-// Basic Styles
-$font-weight-display-4: 300; // Default 300
-$font-weight-display-3: 400; // Default 400
-$font-weight-display-2: 400; // Default 400
-$font-weight-display-1: 400; // Default 400
-$font-weight-headline: 400; // Default 400
-$font-weight-title: 500; // Default 500
-$font-weight-subhead-2: 400; // Default 400
-$font-weight-subhead-1: 300; // Default 300
-$font-weight-body-2: 500; // Default 500
-$font-weight-body-1: 400; // Default 400
-$font-weight-caption: 400; // Default 400
-$font-weight-label: 300; // Default 300
-$font-weight-menu: 400; // Default 400
-$font-weight-button: 500; // Default 500
-
-// Line Height
-$line-height-display-4: 128; // Default 128
-$line-height-display-3: 84; // Default 84
-$line-height-display-2: 64; // Default 48 According to Google specs 48 but 64 looks better
-$line-height-display-1: 40; // Default 40
-$line-height-headline: 32; // Default 32
-$line-height-title: 28; // Default 28
-$line-height-subhead-2: 28; // Default  28
-$line-height-subhead-1: 24; // Default 24
-$line-height-body-2: 24; // Default 24
-$line-height-body-1: 20; // Default 20
-$line-height-caption: 20; // Default 20
-$line-height-label: 20; // Default 20
-$line-height-menu: 20; // Default 20
-$line-height-button: 20; // Default 20
-
-// Tracking and kerning
-$letter-spacing-display-4: -0.1; // Default -0.1
-$letter-spacing-display-3: -0.05; // Default -0.05
-$letter-spacing-display-2: 0; // Default 0
-$letter-spacing-display-1: 0; // Default 0
-$letter-spacing-headline: 0; // Default 0
-$letter-spacing-title: 0.05; // Default 0.05
-$letter-spacing-subhead-2: 0.1; // Default 0.1
-$letter-spacing-subhead-1: 0.1; // Default 0.1
-$letter-spacing-body-2: 0.1; // Default 0.1
-$letter-spacing-body-1: 0.1; // Default 0.1
-$letter-spacing-caption: 0.2; // Default 0.2
-$letter-spacing-label: 0.1; // Default 0.1
-$letter-spacing-menu: 0.1; // Default 0.1
-$letter-spacing-button: 0.1; // Default 0.1
-
 // Color
 $font-color-display-4: rgba($black, .54); // Default rgba($black, .54)
 $font-color-display-3: $font-color-display-4; // Default $font-color-display-4
@@ -172,12 +100,11 @@ $font-color-caption: $font-color-display-4; // Default $font-color-display-4
 $font-color-label: $font-color-display-4; // Default $font-color-display-4
 $font-color-menu: $font-color-headline; // Default $font-color-headline
 $font-color-button: $font-color-headline; // Default $font-color-headline
+
 /**************************************
  * AppBar
  **************************************/
-// Basic
-$appbar-position: fixed; // Default fixed
-$appbar-z-index: 1; // Default 1
+// Basic (Don't change these, they influence the drawer (sidenav) as well)
 $appbar-small-height: rem-calc(48px); // Default rem-calc(48px)
 $appbar-medium-height: rem-calc(56px); // Default rem-calc(56px)
 $appbar-large-height: rem-calc(64px); // Default rem-calc(64px)
@@ -186,27 +113,6 @@ $appbar-large-height: rem-calc(64px); // Default rem-calc(64px)
 $appbar-background: $main-color; // Default $main-color
 $appbar-text: $white; // Default $white
 $appbar-title: $white; // Default $white
-
-// Title
-$appbar-title-small-padding: rem-calc(12px) 0 rem-calc(12px) 0 !important; // Default rem-calc(12px) 0 rem-calc(12px) 0 !important
-$appbar-title-medium-padding: rem-calc(20px) 0 rem-calc(20px) 0 !important; // Default rem-calc(20px) 0 rem-calc(20px) 0 !important
-
-// Icons
-$appbar-icon-font-size: rem-calc(32px); // Default rem-calc(32px)
-$appbar-icon-small-padding: rem-calc(8px); // Default rem-calc(8px)
-$appbar-icon-medium-padding: rem-calc(16px); // Default rem-calc(16px);
-
-// Element widths
-$appbar-nav-width: 19%; // Default 19%
-$appbar-title-small-width: 71%; // Default 71%
-$appbar-title-medium-width: 50%; // Default 50%
-$appbar-actions-width: 27%; // Default 27%;
-$appbar-menu-width: 4%; // Default 4%
-
-// More menu
-$appbar-more-position: absolute; // Default absolute
-$appbar-more-top: rem-calc(4px); // Default rem-calc(4px)
-$appbar-more-right: $appbar-more-top; // Default rem-calc(4px) / $appbar-more-top
 
 /**************************************
  * Bottom navigation
@@ -282,79 +188,37 @@ $bottom-sheet-grid-content-size: rem-calc(16px); // Default rem-calc(16px)
  * Buttons
  **************************************/
 $raised-background: $main-color; // Default $main-color
-$raised-background-hover: darken($main-color, 12); // Default darken($main-color, 12)
-$raised-color: $white; // Default $white
-$raised-color-hover: $raised-color; // Default $raised-color
-$raised-icon-color: $white; // Default $white
-$raised-min-width: rem-calc(64px); // Default rem-calc(64px)
-$raised-size: rem-calc(32px); // Default rem-calc(32px)
-$raised-padding: 0 rem-calc(16px); // Default 0 rem-calc(16px)
-$raised-margin: rem-calc(8px); // Default rem-calc(8px)
-$raised-small-transition: box-shadow $transition-small-duration $basic-transition unquote(',') background $transition-small-duration $basic-transition; // Default box-shadow $transition-small-duration $basic-transition unquote(',') background $transition-small-duration $basic-transition
-$raised-medium-transition: box-shadow $transition-medium-duration $basic-transition unquote(',') background $transition-medium-duration $basic-transition; // Default box-shadow $transition-medium-duration $basic-transition unquote(',') background $transition-medium-duration $basic-transition
-$raised-large-transition: box-shadow $transition-large-duration $basic-transition unquote(',') background $transition-large-duration $basic-transition; // Default box-shadow $transition-large-duration $basic-transition unquote(',') background $transition-large-duration $basic-transition
-$raised-dense-size: rem-calc(32px); // Default rem-calc(32px)
-$raised-dense-font-size: rem-calc(13px); // Default rem-calc(13px)
-$raised-disabled-background: rgba($black, .12); // Default rgba($black, .12)
-$raised-disabled-color: rgba($black, .26); // Default rgba($black, .26)
-$raised-disabled-background-hover: rgba($black, .12); // Default rgba($black, .12)
-$raised-disabled-color-hover: rgba($black, .30); // Default rgba($black, .30)
+$raised-background-hover: color($main-color, 700); // Default color($main-color, 700)
+$raised-font-color: $white; // Default $white
+$raised-icon-color: $raised-font-color; // Default $raised-font-color
+$raised-disabled-background: if( $theme == light, rgba($black, .12), rgba($white, .12) ); // Default if( $theme == light, rgba($black, .12), rgba($white, .12) )
+$raised-disabled-font-color: if( $theme == light, rgba($black, .3), rgba($white, .3) ); // Default if( $theme == light, rgba($black, .3), rgba($white, .3) )
 
 $flat-color: $main-color; // Default $main-color
 $flat-icon-color: $main-color; // Default $main-color
-$flat-focus: $grey; // Default $grey
-$flat-min-width: rem-calc(88px); // Default rem-calc(88px)
-$flat-size: rem-calc(36px); // Default rem-calc(36px)
-$flat-padding: 0 rem-calc(16px); // Default 0 rem-calc(16px)
-$flat-margin: rem-calc(8px); // Default rem-calc(8px)
-$flat-disabled-color: rgba($black, .26); // Default rgba($black, .26)
+$flat-active-background: if( $theme == light, rgba(153, 153, 153, .4), rgba(204, 204, 204, .25) ); // Default if( $theme == light, rgba(153, 153, 153, .4), rgba(204, 204, 204, .25) )
+$flat-disabled-color: if( $theme == light, rgba($black, .26), rgba($white, .3) ); // Default if( $theme == light, rgba($black, .26), rgba($white, .3) )
 
-$floating-transition: all 100ms ease-in-out; // Default all 100ms ease-in-out
 $floating-background: $main-color; // Default $main-color
-$floating-icon: $white; // Default $white
-$floating-size: rem-calc(56px); // Default rem-calc(56px)
-$floating-icon-size: rem-calc(24px); // Default rem-calc(24px)
-$floating-mini-size: rem-calc(40px); // Default rem-calc(40px)
+$floating-icon-color: $white; // Default $white
 
 /**************************************
  * Chips
  **************************************/
-$chips-text: $font-color-headline; // Default $font-color-headline
-$chips-text-hover: $white; // Default $white
-$chips-font-size: rem-calc(13px); // Default rem-calc(13px)
-$chips-font-weight: 400; // Default 400
-$chips-padding: 0 rem-calc(12px); // Default 0 rem-calc(12px)
-$chips-size: rem-calc(32px); // Default rem-calc(32px)
+$chips-font-color: $font-color-headline; // Default $font-color-headline
+$chips-font-hover-color: $white; // Default $white
 $chips-background: $grey-200; // Default $grey-200
 $chips-background-hover: $grey-600; // Default $grey-600
-$chips-delete-size: rem-calc(15px); // Default rem-calc(15px)
 $chips-delete-cross: $chips-background; // Default $chips-background
 $chips-delete-cross-hover: $chips-background-hover; // Default $chips-background-hover
 $chips-delete-background: rgba($black, .54); // Default rgba($black, .54)
-$chips-delete-background-hover: $chips-text-hover; // Default $chips-text-hover
-$chips-delete-margin: 0 rem-calc(-8px) 0 rem-calc(4px); // Default 0 rem-calc(-8px) 0 rem-calc(4px)
-$chips-delete-small-transition: color $transition-small-duration $basic-transition unquote(',') background $transition-small-duration $basic-transition; // Default color $transition-small-duration $basic-transition unquote(',') background $transition-small-duration $basic-transition
-$chips-delete-medium-transition: color $transition-medium-duration $basic-transition unquote(',') background $transition-medium-duration $basic-transition; // Default color $transition-medium-duration $basic-transition unquote(',') background $transition-medium-duration $basic-transition
-$chips-delete-large-transition: color $transition-large-duration $basic-transition unquote(',') background $transition-large-duration $basic-transition; // Default color $transition-large-duration $basic-transition unquote(',') background $transition-large-duration $basic-transition
-$chips-contact-margin: 0 rem-calc(8px) 0 rem-calc(-12px); // Default 0 rem-calc(8px) 0 rem-calc(-12px)
-$chips-contact-font-size: rem-calc(14px); // Default rem-calc(14px)
-$chips-contact-small-transition: box-shadow $transition-small-duration $basic-transition; // Default box-shadow $transition-small-duration $basic-transition
-$chips-contact-medium-transition: box-shadow $transition-medium-duration $basic-transition; // Default box-shadow $transition-medium-duration $basic-transition
-$chips-contact-large-transition: box-shadow $transition-large-duration $basic-transition; // Default box-shadow $transition-large-duration $basic-transition
+$chips-delete-background-hover: $chips-font-hover-color; // Default $chips-font-hover-color
 
 /**************************************
  * Progress & activity
  **************************************/
-$determinate-width: 100%; // Default 100%
-$determinate-background: rgba($main-color, .4); // Default rgba($main-color, .4)
-$determinate-height: rem-calc(5px); // Default rem-calc(5px)
-
+$progressbar-background: rgba($main-color, .4); // Default rgba($main-color, .4)
 $progress-background: $main-color; // Default $main-color
-$progress-transition: width 300ms $basic-transition; // Default width 300ms $basic-transition
-
-$indeterminate-width: $determinate-width; // Default $determinate-width
-$indeterminate-background: $determinate-background; // Default $determinate-background
-$indeterminate-height: $determinate-height; // Default $determinate-height
 
 /**************************************
  * Selection controls
@@ -370,24 +234,23 @@ $radio-size: $checkbox-size; // Default rem-calc(18.2px)
 $radio-margin: $checkbox-margin; // Default rem-calc(20px)
 $radio-disabled-color: $checkbox-disabled-color; // Default $checkbox-disabled-color
 
-$selection-radial-color: rgba($checkbox-color-checked, .26); // Default rgba($checkbox-color, .26)
-$selection-radial-size: 2.8rem; // Default 2.8rem
+// Switch
+$switch-track-background: if( $theme == light, rgba($black, .38), rgba($white, .3) ); // Default if( $theme == light, rgba($black, .38), rgba($white, .3) )
+$switch-track-background-active: if( $theme == light, rgba($main-color, .5), rgba(color($main-color, 200), .5) ); // Default if( $theme == light, rgba($main-color, .5), rgba(color($main-color, 200), .5) )
+$switch-thumb-background: if( $theme == light ,rgba($grey-50, 1), rgba($grey-400, 1) ); // Default if( $theme == light ,rgba($grey-50, 1), rgba($grey-400, 1) )
+$switch-thumb-background-active: if( $theme == light, rgba($main-color, 1), rgba(color($main-color, 200), 1) ); // Default if( $theme == light, rgba($main-color, 1), rgba(color($main-color, 200), 1) )
+$switch-thumb-radial-background: if( $theme == light, rgba($grey-400, .2), rgba($grey-400, .2) ); // Default if( $theme == light, rgba($grey-400, .2), rgba($grey-400, .2) )
+$switch-thumb-radial-background-active: if( $theme == light, rgba($main-color, .2), rgba(color($main-color, 200), .2) ); // Default if( $theme == light, rgba($main-color, .2), rgba(color($main-color, 200), .2) )
+$switch-track-disabled-background: if( $theme == light, rgba($black, .12), rgba($white, .1) ); // Default if( $theme == light, rgba($black, .12), rgba($white, .1) )
+$switch-thumb-disabled-background: if( $theme == light, rgba($grey-400, 1), rgba($grey-800, 1) ); // Default if( $theme == light, rgba($grey-400, 1), rgba($grey-800, 1) )
+$switch-thumb-radial-disabled-background: rgba($grey-400, .2); // Default rgba($grey-400, .2)
+
 
 /**************************************
  * Snackbars and toasts
  **************************************/
-$snackbar-position: fixed; // Default fixed
-$snackbar-height: rem-calc(48px); // Default rem-calc(48px)
-$snackbar-font-size: rem-calc(14px); // Default rem-calc(14px)
-$snackbar-padding: rem-calc(14px) rem-calc(24px); // Default rem-calc(14px) rem-calc(24px)
-$snackbar-background: #323232; // Default #323232
+$snackbar-background: rgba(#323232, 1); // Default rgba(#323232, 1)
 $snackbar-font-color: $white; // Default $white
-$snackbar-min-width: rem-calc(288px); // Default rem-calc(288px)
-$snackbar-max-width: rem-calc(568px); // Default rem-calc(568px)
-$snackbar-border-radius: rem-calc(2px); // Default rem-calc(2px)
-$snackbar-action-font-weight: 500; // Default 500
-$snackbar-action-small-margin-left: rem-calc(24px); // Default rem-calc(24px)
-$snackbar-action-large-margin-left: rem-calc(48px); // Default rem-calc(48px)
 
 /**************************************
  * Navigation drawer
@@ -616,17 +479,6 @@ $textfield-floating-dense-label-active-bottom: rem-calc(29px); // Default rem-ca
  **************************************/
 $tooltip-background: $grey-700; // Default $grey-700
 $tooltip-font-color: $white; // Default $white
-$tooltip-opacity: .90; // Default .90
-$tooltip-small-font: rem-calc(14px); // Default rem-calc(14px)
-$tooltip-large-font: rem-calc(10px); // Default rem-calc(10px)
-$tooltip-font-weight: 500; // Default 500 (medium)
-$tooltip-small-top: rem-calc(24px); // Default rem-calc(24px)
-$tooltip-large-top: rem-calc(14px); // Default rem-calc(14px)
-$tooltip-small-height: rem-calc(32px); // Default rem-calc(32px)
-$tooltip-large-height: rem-calc(22px); // Default rem-calc(22px)
-$tooltip-small-padding: 0 rem-calc(16px); // Default 0 rem-calc(16px)
-$tooltip-large-padding: 0 rem-calc(8px); // Default 0 rem-calc(8px)
-$tooltip-z-index: 10; // Default 10
 
 /**************************************
  * Grid settings
