--- a/stylesheets/scss/components/_snackbars.scss
+++ b/stylesheets/scss/components/_snackbars.scss
@@ -3,35 +3,37 @@
  *
  * http://www.google.com/design/spec/components/snackbars-toasts.html
  **************************************/
+
+$snackbar-action-margin: rem-calc(24px);
+
 .sc-snackbar {
 	background: $snackbar-background;
 	bottom: 0;
 	color: $snackbar-font-color;
-	font-size: $snackbar-font-size;
-	height: $snackbar-height;
+	font-size: rem-calc(14px);
+	height: rem-calc(48px);
 	left: 0;
 	overflow: hidden;
-	padding: $snackbar-padding;
-	position: $snackbar-position;
+	padding: rem-calc(14px) rem-calc(24px);
+	position: fixed;
 	right: 0;
 
-	@media #{$large-up} {
+	@media #{$medium-up} {
 		left: auto;
 		right: auto;
-		min-width: $snackbar-min-width;
-		max-width: $snackbar-max-width;
-		@include border-radius($snackbar-border-radius);
+		min-width: rem-calc(288px);
+		max-width: rem-calc(568px);
+		@include border-radius(rem-calc(2px));
 	}
 
 	&-action {
 		@extend .sc-right;
-		font-size: $snackbar-font-size;
-		font-weight: $snackbar-action-font-weight;
-		margin-left: $snackbar-action-small-margin-left;
+		font-weight: 500;
+		margin: 0 0 0 $snackbar-action-margin;
 		text-transform: capitalize;
 
 		@media #{$large-up} {
-			margin-left: $snackbar-action-large-margin-left;
+			margin: 0 0 0 calc(#{$snackbar-action-margin} * 2);
 		}
 	}
 }
